# kpi-devops

./: .gitignore  ExponentialSeries.cpp  ExponentialSeries.h  Makefile  Makefile.am  README.md  configure.ac  main.cpp
.github/workflows/: build.yml  debianPackage.yml
debian/: changelog  control
tests/: test_funcA.cpp
